# deskpilot

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  release-please-config.json
.github/workflows/: ci.yml  crates-publish.yml  homebrew-update.yml  npm-publish.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: action.rs  adapter.rs  refs.rs
crates/core/src/commands/: capabilities.rs  mod.rs  press.rs
crates/ffi/: Cargo.toml  build.rs
crates/ffi/examples/: panic_spike.rs
crates/ffi/include/: agent_desktop.h
crates/ffi/src/: adapter.rs  enum_validation.rs  error.rs  lib.rs  main_thread.rs
crates/ffi/src/actions/: conversion.rs  execute.rs  native_handle.rs  resolve.rs  result.rs
crates/ffi/src/apps/: close.rs  launch.rs
crates/ffi/src/convert/: app.rs  notification.rs  rect.rs  string.rs  surface.rs  window.rs
crates/ffi/src/input/: clipboard.rs  drag.rs  mouse.rs
crates/ffi/src/notifications/: action.rs  dismiss_all.rs  filter.rs
crates/ffi/src/observation/: find.rs  get.rs  is.rs  walk.rs
crates/ffi/src/screenshot/: capture.rs
crates/ffi/src/tree/: flatten.rs  get.rs
crates/ffi/src/types/: modifier.rs
crates/ffi/src/windows/: list.rs  op.rs  to_core.rs
crates/ffi/tests/: c_abi_harness.rs  c_header_compile.rs  error_lifetime.rs
crates/linux/: Cargo.toml
crates/linux/src/: lib.rs
crates/macos/: Cargo.toml
crates/macos/examples/: ax_probe.rs  axprobe.rs  axprobe2.rs
crates/macos/src/: adapter.rs  lib.rs
crates/macos/src/actions/: ax_helpers.rs  chain.rs  chain_defs.rs  chain_steps.rs  dispatch.rs  extras.rs
crates/macos/src/input/: clipboard.rs  keyboard.rs  mouse.rs
crates/macos/src/notifications/: actions.rs  list.rs  nc_session.rs
crates/macos/src/system/: app_ops.rs  key_dispatch.rs  permissions.rs  screenshot.rs  wait.rs  window_ops.rs
crates/macos/src/tree/: builder.rs  element.rs  resolve.rs  surfaces.rs
crates/windows/: Cargo.toml
crates/windows/src/: lib.rs
crates/windows/src/system/: app_ops.rs  input.rs  key_dispatch.rs  mod.rs  notifications.rs  permissions.rs  screenshot.rs  wait.rs  window_ops.rs
crates/windows/tests/: integration.rs
docs/: phases.md
docs/solutions/logic-errors/: progressive-snapshot-review-hardening-2026-04-16.md
npm/: package.json
npm/scripts/: postinstall.js
scripts/: update-ffi-header.sh
skills/agent-desktop/: SKILL.md
skills/agent-desktop-ffi/: SKILL.md
skills/agent-desktop-ffi/references/: build-and-link.md  threading.md
skills/agent-desktop/references/: commands-interaction.md  commands-observation.md  commands-system.md  macos.md  workflows.md
src/: Cargo.toml  batch_dispatch.rs  batch_dispatch_ext.rs  cli.rs  cli_args.rs  dispatch.rs  dispatch_notifications.rs  main.rs
tests/fixtures/: README.md
tests/integration/: snapshot_test.rs
