[workspace]
members  = ["crates/core", "crates/macos", "crates/windows", "crates/linux", "crates/ffi", "src"]
resolver = "2"

[workspace.package]
edition      = "2021"
rust-version = "1.78"
license      = "Apache-2.0"
version      = "0.1.14" # x-release-please-version

[workspace.dependencies]
clap               = { version = "4.5", features = ["derive"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
thiserror          = "2.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64             = "0.22"
rustc-hash         = "2.1"
deskpilot-core = { path = "crates/core" }

# Platform-specific dependencies (optional, enabled by feature flags)
[target.'cfg(target_os = "macos")'.workspace.dependencies]
accessibility-sys  = "0.2"
core-foundation    = "0.10"
core-graphics      = "0.24"

[target.'cfg(target_os = "windows")'.workspace.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
] }

[target.'cfg(target_os = "linux")'.workspace.dependencies]
atspi = "0.22"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

# Fast build for CI: skip LTO and size optimisations, keep debug info for
# better test failure messages. Inherits release settings not listed here.
[profile.ci]
inherits      = "release"
opt-level     = 1
lto           = false
codegen-units = 16
strip         = false
debug         = 1

# Dedicated profile for the FFI cdylib. Overrides panic = "abort" so
# catch_unwind actually catches at the extern "C" boundary — the CLI
# release profile stays abort for size reasons.
[profile.release-ffi]
inherits = "release"
panic    = "unwind"
