[package]
name    = "deskpilot-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
deskpilot-core.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
deskpilot-macos = { path = "../macos" }
libc                = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
deskpilot-windows = { path = "../windows" }

[target.'cfg(target_os = "linux")'.dependencies]
deskpilot-linux = { path = "../linux" }

[build-dependencies]
cbindgen = "= 0.27.0"
