[package]
name    = "deskpilot-windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deskpilot-core.workspace = true
thiserror.workspace          = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
] }
